feat: 304 测试增加 /page1, /page2 两个路由

--- a/app/static/page1.html
+++ b/app/static/page1.html
@@ -11,6 +11,10 @@
     Hello world
   </h1>
   <p>
+    <a href="/page1">page1</a><br>
+    <a href="/page2">page2</a>
+  </p>
+  <p>
     this is page1
   </p>
   <p style="height: 500px; overflow: auto;">
